validaciones y correcion de bugs

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -63,7 +63,7 @@
 <div class="col-md-12" style="height:50px;"></div>
 
 
-<div id="fb-root"></div>
+<!-- <div id="fb-root"></div>
 <script>
   window.fbAsyncInit = function() {
   FB.init({
@@ -122,349 +122,46 @@
     });
   }
 </script>
-
+ -->
 <!--
   Below we include the Login Button social plugin. This button uses the JavaScript SDK to
   present a graphical Login button that triggers the FB.login() function when clicked. -->
-
+<!-- 
 <fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>
-
+ -->
 
 <div id="con-tenedor" class="row">
 
 <!-- APPS APPS APPS APPS APPS APPS APPS APPS APPS APPS APPS APPS APPS -->	
-	<div class="col-md-12 divContenidosInicial color1Inicio" style="background-image: url(img/appsProy.png);">
-		<h2 class="col-md-12 pull-right styleTits" style="color:black; text-align: left;">Aplicaciones</h2>
+	<div class="col-md-12 divContenidosInicial color1Inicio thumbnail" style="background-image: url(img/appsProy.png);">
+		<h2 class="col-md-12 styleTits" style="color:black; text-align: left; margin-left:1em">Aplicaciones</h2>
 	</div>
 	<div class="col-md-12 separador"></div>
-	<div class="container" id="containerApp">
-		<div id="aplicacion1"  class="col-sm-5 col-md-3">
-			<div class="thumbnail">
-				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-thumbnail miniatura img-responsive">
-				<div class="caption">
-					<h3>Aplicacion 4</h3>
-					<p>Laslasdkadjklasjd</p>
-					<p class="precio">
-						<a href="views/content.html?id=3" class="btn btn-primary" role="button">Ver</a>
-						<a href="http://localhost:8080/SERVER-MODULE-PRESENTATION/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
-						USD 2.0
-					</p>
-				</div>
-			</div>
-		</div>
-	  
-		<div id="aplicacion2"  class="col-sm-5 col-md-3">
-			<div class="thumbnail">
-				<img src="img/mu2.jpg" alt="img/mu2.jpg" class="img-thumbnail miniatura img-responsive">
-				<div class="caption">
-					<h3>Aplicacion 3</h3>
-					<p>Descripcion</p>
-					<p class="precio">
-						<a href="views/content.html?id=3" class="btn btn-primary" role="button">Ver</a>
-						<a href="http://localhost:8080/SERVER-MODULE-PRESENTATION/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
-						USD 2.0
-					</p>
-				</div>
-			</div>
-		</div>
-
-		<div id="aplicacion2"  class="col-sm-5 col-md-3">
-			<div class="thumbnail">
-				<img src="img/mu2.jpg" alt="img/mu2.jpg" class="img-thumbnail miniatura img-responsive">
-				<div class="caption">
-					<h3>Aplicacion 3</h3>
-					<p>Descripcion</p>
-					<p class="precio">
-						<a href="views/content.html?id=3" class="btn btn-primary" role="button">Ver</a>
-						<a href="http://localhost:8080/SERVER-MODULE-PRESENTATION/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
-						USD 2.0
-					</p>
-				</div>
-			</div>
-		</div>
-
-				<div id="aplicacion2"  class="col-sm-5 col-md-3">
-			<div class="thumbnail">
-				<img src="img/mu2.jpg" alt="img/mu2.jpg" class="img-thumbnail miniatura img-responsive">
-				<div class="caption">
-					<h3>Aplicacion 3</h3>
-					<p>Descripcion</p>
-					<p class="precio">
-						<a href="views/content.html?id=3" class="btn btn-primary" role="button">Ver</a>
-						<a href="http://localhost:8080/SERVER-MODULE-PRESENTATION/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
-						USD 2.0
-					</p>
-				</div>
-			</div>
-		</div>
-
-		<div id="aplicacion2"  class="col-sm-5 col-md-3">
-			<div class="thumbnail">
-				<img src="img/mu2.jpg" alt="img/mu2.jpg" class="img-thumbnail miniatura img-responsive">
-				<div class="caption">
-					<h3>Aplicacion 3</h3>
-					<p>Descripcion</p>
-					<p class="precio">
-						<a href="views/content.html?id=3" class="btn btn-primary" role="button">Ver</a>
-						<a href="http://localhost:8080/SERVER-MODULE-PRESENTATION/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
-						USD 2.0
-					</p>
-				</div>
-			</div>
-		</div>
-
-		<div id="aplicacion2"  class="col-sm-5 col-md-3">
-			<div class="thumbnail">
-				<img src="img/mu2.jpg" alt="img/mu2.jpg" class="img-thumbnail miniatura img-responsive">
-				<div class="caption">
-					<h3>Aplicacion 3</h3>
-					<p>Descripcion</p>
-					<p class="precio">
-						<a href="views/content.html?id=3" class="btn btn-primary" role="button">Ver</a>
-						<a href="http://localhost:8080/SERVER-MODULE-PRESENTATION/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
-						USD 2.0
-					</p>
-				</div>
-			</div>
-		</div>
-
-		<div id="aplicacion3"  class="col-sm-5 col-md-3">
-			<div class="thumbnail">
-				<img src="img/mu3.jpg" alt="img/mu3.jpg" class="img-thumbnail miniatura img-responsive">
-				<div class="caption">
-					<h3>Aplicacion 2</h3>
-					<p>Descripcion</p>
-					<p class="precio">
-						<a href="views/content.html?id=3" class="btn btn-primary" role="button">Ver</a>
-						<a href="http://localhost:8080/SERVER-MODULE-PRESENTATION/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
-						USD 2.0
-					</p>
-				</div>
-			</div>
-		</div>	
-
-		<div id="aplicacion4" class="col-sm-5 col-md-3">
-			<div class="thumbnail">
-				<img src="img/mu4.jpg" alt="img/mu4.jpg" class="img-thumbnail miniatura img-responsive">
-				<div class="caption">
-					<h3>Aplicacion 1</h3>
-					<p>Descripcion</p>
-					<p class="precio">
-						<a href="views/content.html?id=3" class="btn btn-primary" role="button">Ver</a>
-						<a href="http://localhost:8080/SERVER-MODULE-PRESENTATION/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
-						USD 2.0
-					</p>
-				</div>
-			</div>
-		</div>
-	</div>
+	<div class="container" id="containerApp"></div>
 	<div class="col-md-12 separador"></div>
 
 <!--LIBROS LIBROS LIBROS LIBROS  LIBROS  LIBROS  LIBROS  LIBROS -->	
-	<div class="col-md-12 divContenidosInicial color2Inicio" style="background-image: url(img/olivier.jpg);">
+	<div class="col-md-12 divContenidosInicial color2Inicio thumbnail" style="background-image: url(img/olivier.jpg);">
 		<h2 class="col-md-12 pull-right styleTits" style="color:white; text-align: right;">Libros</h2>
 	</div>
 	<div class="col-md-12 separador"></div>
-	<div class="container" id="containerLibro">
-		<div id="libro1"  class="col-sm-5 col-md-3">
-			<div class="thumbnail">
-				<img src="img/li1.jpg" alt="img/mu1.jpg" class="img-thumbnail miniatura img-responsive">
-				<div class="caption">
-					<h3>Libro 1</h3>
-					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
-					<p class="precio">
-						<a href="views/content.html?id=2" class="btn btn-primary" role="button">Ver</a>
-						<a href="http://localhost:8080/SERVER-MODULE-PRESENTATION/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
-						USD 2.0
-					</p>
-				</div>
-			</div>
-		</div>
-		
-		<div id="libro2"  class="col-sm-5 col-md-3">
-			<div class="thumbnail">
-				<img src="img/li2.jpg" alt="img/mu2.jpg" class="img-thumbnail miniatura img-responsive">
-				<div class="caption">
-					<h3>Libro 1</h3>
-					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
-					<p class="precio">
-						<a href="views/content.html?id=2" class="btn btn-primary" role="button">Ver</a>
-						<a href="http://localhost:8080/SERVER-MODULE-PRESENTATION/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
-						USD 2.0
-					</p>
-				</div>
-			</div>
-		</div>
-		
-		<div id="libro3"  class="col-sm-5 col-md-3">
-			<div class="thumbnail">
-				<img src="img/li3.jpg" alt="img/mu3.jpg" class="img-thumbnail miniatura img-responsive">
-				<div class="caption">
-					<h3>Libro 1</h3>
-					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
-					<p class="precio">
-						<a href="views/content.html?id=2" class="btn btn-primary" role="button">Ver</a>
-						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
-						USD 2.0
-					</p>
-				</div>
-			</div>
-		</div>
-		
-		<div id="libro4"  class="col-sm-5 col-md-3">
-			<div class="thumbnail">
-				<img src="img/li4.png" alt="img/mu4.jpg" class="img-thumbnail miniatura img-responsive">
-				<div class="caption">
-					<h3>Libro 1</h3>
-					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
-					<p class="precio">
-						<a href="views/content.html?id=2" class="btn btn-primary" role="button">Ver</a>
-						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>
-						USD 2.0
-					</p>
-				</div>
-			</div>
-		</div>
-	</div>
+	<div class="container" id="containerLibro"></div>
 	<div class="col-md-12 separador"></div>
 
 <!-- VIDEOS VIDEOS VIDEOS VIDEOS VIDEOS VIDEOS VIDEOS VIDEOS VIDEOS VIDEOS -->
-	<div class="col-md-12 divContenidosInicial color1Inicio" style="background-image: url(img/candy.png);">
-		<h2 class="col-md-12 pull-right styleTits" style="color:black; text-align: left;">Videos</h2>
+	<div class="col-md-12 divContenidosInicial color1Inicio thumbnail" style="background-image: url(img/candy.png);">
+		<h2 class="col-md-12 styleTits" style="color:black;text-align:left;margin-left:1em">Videos</h2>
 	</div>
 	<div class="col-md-12 separador"></div>
-	
-	<div class="container" id="containerVideo">
-		<div id="video1"  class="col-sm-5 col-md-3">
-			<div class="thumbnail">
-				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-thumbnail miniatura img-responsive">
-				<div class="caption">
-					<h2>Video 1</h2>
-					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
-					<p class="precio">
-						<a href="views/content.html?id=4" class="btn btn-primary" role="button">Ver</a>
-						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
-						USD 2.0
-					</p>
-				</div>
-			</div>
-		</div>
-		
-		<div id="video2"  class="col-sm-5 col-md-3">
-			<div class="thumbnail">
-				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-thumbnail miniatura img-responsive">
-				<div class="caption">
-					<h2>Video 2</h2>
-					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
-					<p class="precio">
-						<a href="views/content.html?id=4" class="btn btn-primary" role="button">Ver</a>
-						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
-						USD 2.0
-					</p>
-				</div>
-			</div>
-		</div>
-		
-		<div id="video3"  class="col-sm-5 col-md-3">
-			<div class="thumbnail">
-				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-thumbnail miniatura img-responsive">
-				<div class="caption">
-					<h2>Video 3</h2>
-					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
-					<p class="precio">
-						<a href="views/content.html?id=4" class="btn btn-primary" role="button">Ver</a>
-						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
-						USD 2.0
-					</p>
-				</div>
-			</div>
-		</div>
-		
-		<div id="video4"  class="col-sm-5 col-md-3">
-			<div class="thumbnail">
-				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-thumbnail miniatura img-responsive">
-				<div class="caption">
-					<h2>Video 4</h2>
-					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
-					<p class="precio">
-						<a href="views/content.html?id=4" class="btn btn-primary" role="button">Ver</a>
-						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
-						USD 2.0
-					</p>
-				</div>
-			</div>
-		</div>
-	</div>		
-
+	<div class="container" id="containerVideo"></div>		
 	<div class="col-md-12 separador"></div>
 
 <!-- MUSICA MUSICA MUSICA MUSICA MUSICA MUSICA MUSICA MUSICA MUSICA MUSICA-->
-	<div class="col-md-12 divContenidosInicial color2Inicio" style="background-image: url(img/music.png);">
-		<h2 class="col-md-12 pull-right styleTits" style="text-align: right;">Musica</h2>
+	<div class="col-md-12 divContenidosInicial color2Inicio thumbnail" style="background-image: url(img/music.png);">
+		<h2 class="col-md-12 pull-right styleTits" style="color:black;text-align: right;">Musica</h2>
 	</div>
 	<div class="col-md-12 separador"></div>
-	<div class="container" id="containerMusica">
-		<div id="musica1"  class="col-sm-5 col-md-3">
-			<div class="thumbnail">
-				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-thumbnail miniatura img-responsive">
-				<div class="caption">
-					<h2>Musica 1</h2>
-					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
-					<p class="precio">
-						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
-						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
-						USD 2.0
-					</p>
-				</div>
-			</div>
-		</div>
-		
-		<div id="musica2"  class="col-sm-5 col-md-3">
-			<div class="thumbnail">
-				<img src="img/mu2.jpg" alt="img/mu2.jpg" class="img-thumbnail miniatura img-responsive">
-				<div class="caption">
-					<h2>Musica 2</h2>
-					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
-					<p class="precio">
-						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
-						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
-						USD 2.0
-					</p>
-				</div>
-			</div>
-		</div>
-		
-		<div id="musica3"  class="col-sm-5 col-md-3">
-			<div class="thumbnail">
-				<img src="img/mu3.jpg" alt="img/mu3.jpg" class="img-thumbnail miniatura img-responsive">
-				<div class="caption">
-					<h2>Musica 3</h2>
-					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
-					<p class="precio">
-						<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
-						<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
-						USD 2.0
-					</p>
-				</div>
-			</div>
-		</div>
-		
-		<div id="musica4" class="col-sm-5 col-md-3">
-		    <div class="thumbnail">
-		        <img src="img/mu4.jpg" alt="img/mu4.jpg" class="img-thumbnail miniatura img-responsive"
-		        />
-		        <div class="caption">
-		            	<h2>Musica 4</h2>
-		            <p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
-		            <p class="precio">	<a href="views/content.html?id=1" class="btn btn-primary" role="button">Ver</a>
-		                <a
-		                href="FileDispatcherServlet?usr=pedro&amp;tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&amp;file=contenido_no_porno"
-		                class="btn btn-default" role="button">Comprar</a>USD 2.0</p>
-		        </div>
-		    </div>
-		</div>
-	</div>
-
+	<div class="container" id="containerMusica"></div>
 	<div class="col-md-12 separador"></div>
 
 </div>
@@ -489,7 +186,6 @@
 </div>
 
 </body>
-
 
 <!-- CONFIGURAR BUSQUEDA -->
 <div id="configurarBusqueda" class="modal fade" tabindex="-1" role="dialog">
