Arreglos de detalles varios. Agrego libreria alertify

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
@@ -17,6 +17,8 @@
 	<link rel="stylesheet" type="text/css" href="../css/market.css" media="screen" />	
 	<link rel="stylesheet" type="text/css" href="../css/css-popup.css" media="screen" />	
 	<link rel="stylesheet" type="text/css" href="../css/datepicker.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="../css/alertify.core.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="../css/alertify.default.css" media="screen" />
 	
 	<script src="../js/Plugins/jquery.min.js"></script>
 	<script src="../js/Plugins/jquery-ui.js"></script>
@@ -29,6 +31,7 @@
 	<script src="../js/admin.js"></script>
 	<script src="../js/Plugins/css-popup.js"></script>
 	<script src="../js/Plugins/bootstrap-datepicker.js"></script>
+	<script src="../js/Plugins/alertify.min.js"></script>
 </head>
 
 <body>
@@ -56,6 +59,7 @@
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialSubCategorias.xhtml">Subcategorias</a></li>
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialParametros.xhtml">Parametros del sistema</a></li>
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialReclamos.xhtml">Gestión de reclamos</a></li>
+				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialAdministrador.xhtml">Registrar administrador</a></li>
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialCambiarContrasenia.xhtml">Cambiar contraseña</a></li>
 				<li><a href="#" onclick="logoutUsuario()">Salir del sistema</a></li>
 			</ul>	
@@ -68,7 +72,7 @@
 			</div>
 		</div>
 		</div>
-		<div id="blanket" style="display:none;"></div>	
+
 </body>
 
 </html>
