--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialCategorias.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialCategorias.xhtml
@@ -12,7 +12,7 @@
 		<h:form>
 			<div class="row">
 				<div class="col-md-12">
-					<h2>Gestion de categorias</h2>
+					<h2>Gestion de categorías</h2>
 					
 					<h:commandButton class="btn" style="float:right" action="#{categoriaMB.mostrarPanelIngreso}" value="Nuevo">
 					</h:commandButton>
@@ -28,7 +28,7 @@
 						  		<h:inputText value="#{categoriaMB.filtroNombre}" class="col-md-10 form-control"/>							
 							</div>
 							<div class="col-md-3">
-								Descripcion
+								Descripción
 								<h:inputText value="#{categoriaMB.filtroDescripcion}" class="col-md-10 form-control"/>
 							</div>
 							<div class="col-md-3">
@@ -64,7 +64,7 @@
 							</h:column>
 			
 							<h:column>
-								<f:facet name="header">Descripcion</f:facet>
+								<f:facet name="header">Descripción</f:facet>
 								#{o.descripcion}
 							</h:column>
 							
@@ -92,10 +92,9 @@
 
 		<h:panelGroup id="panelModificar" rendered="#{categoriaMB.activoPanelEditar}">
 			<h:form>
-				<div class="modal loginDiv modal-dialog"
-					style="width: 300px">
+				<div class="modal adminModalPanelDiv modal-dialog">
 					<div class="modal-content">
-						<div class="modal-header">Modificar categoria</div>
+						<div class="modal-header">Modificar categoría</div>
 						<div class="modal-body">
 							<div class="row">
 								<div class="col-md-12 col-xs-10">
@@ -104,7 +103,7 @@
 										Nombre <h:inputText value="#{categoriaMB.currentCategoria.nombre}" type="text" class="col-xs-7 form-control" />
 									</p>
 									<p>
-										Descripcion <h:inputText value="#{categoriaMB.currentCategoria.descripcion}" type="text" class="col-xs-7 form-control" />
+										Descripción <h:inputText value="#{categoriaMB.currentCategoria.descripcion}" type="text" class="col-xs-7 form-control" />
 									</p>
 								</div>
 							</div>
@@ -118,10 +117,9 @@
 			</h:form>
 		</h:panelGroup>
 
-		<h:panelGroup id="panelIngreso" rendered="#{categoriaMB.activoPanelIngreso}">
-			<h:form>
-				<div class="modal loginDiv modal-dialog"
-					style="width: 300px">
+		<h:panelGroup id="panelIngreso" rendered="#{categoriaMB.activoPanelIngreso}">			
+			<h:form>				
+				<div class="modal adminModalPanelDiv modal-dialog">
 					<div class="modal-content">
 						<div class="modal-header">Crear nueva categoria</div>
 						<div class="modal-body">
@@ -132,15 +130,13 @@
 										Nombre <h:inputText value="#{categoriaMB.nuevaCategoria.nombre}" type="text" class="col-xs-7 form-control" />
 									</p>
 									<p>
-										Descripcion <h:inputText value="#{categoriaMB.nuevaCategoria.descripcion}" type="text" class="col-xs-7 form-control" />
+										Descripción <h:inputText value="#{categoriaMB.nuevaCategoria.descripcion}" type="text" class="col-xs-7 form-control" />
 									</p>
 								</div>
 							</div>
 						</div>						
-						<div class="modal-footer">
-							<div>
-								<h:message for="btnConfirmarIngreso" class="ERROR" />
-							</div>
+						<div class="modal-footer">	
+							<p><h:message for="btnConfirmarIngreso" /></p>						
 							<h:commandButton class="btn" id="btnConfirmarIngreso" value="Confirmar" action="#{categoriaMB.crearCategoria}" />
 							<h:commandButton class="btn" value="Cancelar" action="#{categoriaMB.ocultarPanelIngreso}" />
 						</div>
@@ -151,14 +147,13 @@
 
 		<h:panelGroup id="panelEliminar" rendered="#{categoriaMB.activoPanelEliminar}">
 		<h:form>
-		<div class="modal loginDiv modal-dialog"
-			style="width: 300px">
+		<div class="modal adminModalPanelDiv modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">Eliminar categoria</div>
 				<div class="modal-body">
 					<div class="row">
 						<div class="col-md-12 col-xs-10">
-							<h4>¿Seguro que desea cambiar el estado de la categoria?</h4>
+							<h4>¿Seguro que desea cambiar el estado de la categoría?</h4>
 						</div>
 					</div>
 				</div>
