--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialUsuarios.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialUsuarios.xhtml
@@ -29,12 +29,9 @@
 								Tipo de usuario
 								<h:selectOneMenu value="#{usuarioMB.filtroTipoUsuario}" class="selectpicker">
 									<f:selectItem itemLabel="Todos" itemValue="todos" />
-									<f:selectItem itemLabel="Administrador"
-										itemValue="usuario_administrador" />
-									<f:selectItem itemLabel="Proveedor"
-										itemValue="usuario_proveedor" />
-									<f:selectItem itemLabel="Cliente"
-										itemValue="usuario_cliente" />
+									<f:selectItem itemLabel="Administrador" itemValue="usuario_administrador" />
+									<f:selectItem itemLabel="Proveedor" itemValue="usuario_proveedor" />
+									<f:selectItem itemLabel="Cliente" itemValue="usuario_cliente" />
 								</h:selectOneMenu>
 							</div>
 						</div>
