agregamos alertify y correciones varias

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -12,6 +12,12 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-select.min.css" media="screen"/>
 	<link rel="stylesheet" type="text/css" href="css/market.css" media="screen"/>
 	<link rel="stylesheet" type="text/css" href="css/jquery-ui.css" media="screen"/>
+	
+    <link rel="stylesheet" href="css/alertify.default.css"/>
+    <link rel="stylesheet" href="css/alertify.bootstrap.css"/>      
+	
+	<link rel="stylesheet" href="css/alertify.core.css"/>	
+
 	<script src="js/Plugins/jquery.min.js"></script>
 </head>
 
@@ -316,14 +322,16 @@
 </div>
 
 <script src="js/Plugins/jquery-ui.js"></script>
+<script src="js/Plugins/holder.js"></script>
+<script src="js/Plugins/bootstrap.js"></script>
+<script src="js/Plugins/alertify.min.js"></script>
+<script src="js/Plugins/bootstrap-select.min.js"></script>
+
 <script src="js/globalesProyecto.js"></script>
 <script src="js/Prototipos.js"></script>
 <script src="js/Inicio.js"></script>
 <script src="js/main.js"></script>
-<script src="js/Plugins/holder.js"></script>
 <script src="js/blockUI.js"></script>
-<script src="js/Plugins/bootstrap.js"></script>
-<script src="js/Plugins/bootstrap-select.min.js"></script>
 <script src="js/Objetos.js"></script>
 <script src="js/LlamadasAjax.js"></script>
 <script src="js/getSet.js"></script>
