agregamos alertify y correciones varias1.1

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/proveedor/AltaContenido.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/proveedor/AltaContenido.html
@@ -284,9 +284,14 @@
     </script>
 
 
-<div id="mensajeContenido" class="container hide">
+<div id="mensajeContenidoExito" class="container hide">
   <span class="label label-success">Exito</span>
-    <p class="text-success">Contenido creado exitosamente y pendiente de revision.</p>
+    <p class="text-success text-center" style="font-size: xx-large;font-weight: lighter;">Contenido creado exitosamente y pendiente de revision.</p>
+</div>
+
+<div id="mensajeContenidoError" class="container hide">
+  <span class="label label-error">ERROR</span>
+    <p class="text-error text-center" style="font-size: xx-large;font-weight: lighter;">Ocurrio un error inesperado contactese con el administrador para mas informacion.</p>
 </div>
 
 
