--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialAuditoria.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialAuditoria.xhtml
@@ -58,7 +58,7 @@
 		
 						<h:column>
 							<f:facet name="header">Usuario</f:facet>
-							<a href="#">#{o.usuario}</a>
+							<a target="_blank" href="/SERVER-MODULE-PRESENTATION/views/perfil.html?nick=#{o.usuario}">#{o.usuario}</a>
 						</h:column>
 		
 						<h:column>
