--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -19,12 +19,18 @@
 	<link rel="stylesheet" href="css/alertify.core.css"/>	
 
 	<script src="js/Plugins/jquery.min.js"></script>
+	<script>
+		function confirmar(){
+			alertify.confirm('Message', function (e) {if (e) return true; else return false;});
+		}
+	</script>
+
 </head>
 
 <body id="cuerpo" class="overlay" style="background-color: whitesmoke;">
 
 <!-- BARRA DE NAVEGACION -->
-<nav id='caca' class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="navbar-header">
 		<button type="button" class="navbar-toggle" data-toggle="collapse"
 			data-target=".navbar-ex1-collapse">
@@ -33,7 +39,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="localhost:8080/SERVER-MODULE-PRESENTATION">Market Place Tecnologo</a>
+		<a class="navbar-brand" href="/SERVER-MODULE-PRESENTATION/index.html">Market Place Tecnologo</a>
 	</div>
   <div class="collapse navbar-collapse navbar-ex1-collapse"> 
     <ul class="navbar-form navbar-left" role="search">
@@ -47,7 +53,7 @@
 		</ul>
 	</ul>
     <ul class="nav navbar-nav navbar-right" id="Login-Registro-Div">
-		<a href="#" class="btn btn-primary barraBusquedaHome" role="button" data-toggle="dropdown">Registrarse</a>
+		<a href="#" onclick="return confirmar();" class="btn btn-primary barraBusquedaHome" role="button" data-toggle="dropdown">Registrarse</a>
 		<ul class="dropdown-menu">
 			<li><a href="#" onclick="setRegistroTipo('proveedor');verModales('registroUsuario')">Soy Proveedor</a></li>
 			<li><a href="#" onclick="setRegistroTipo('cliente');verModales('registroUsuario')">Soy Cliente</a></li>
@@ -57,8 +63,8 @@
 	<ul class="nav navbar-nav navbar-right" id="Nick-Logout-Div" style="display: none;margin-right: initial;margin-top: 0.7em;" hidden>
         <a class="nick dropdown-toggle" data-toggle="dropdown" role="button" href="#"><i class="glyphicon glyphicon-user"></i> nick <span class="caret"></span></a>
 		<ul class="dropdown-menu">
-		    <li id="opt_irAltaContenido"><a href="http://localhost:8080/SERVER-MODULE-PRESENTATION/proveedor/AltaContenido.html"><i class="glyphicon glyphicon-cloud-upload"></i> Crear Contenido</a></li>
-		    <li id="opt_irAdministracion"><a href="http://localhost:8080/SERVER-MODULE-PRESENTATION/admin/admin.xhtml"><i class="glyphicon glyphicon-wrench"></i> Administracion</a></li>
+		    <li id="opt_irAltaContenido"><a href="/SERVER-MODULE-PRESENTATION/index.html/proveedor/AltaContenido.html" onclick="return confirmar();"><i class="glyphicon glyphicon-cloud-upload"></i> Crear Contenido</a></li>
+		    <li id="opt_irAdministracion"><a href="/SERVER-MODULE-PRESENTATION/admin/admin.xhtml"><i class="glyphicon glyphicon-wrench"></i> Administracion</a></li>
 		    <li><a id="dd_verPerfil" href="#"><i class="glyphicon glyphicon-user"></i> Ver Perfil</a></li>
 		    <li class="divider"></li>
 		    <li><a href="#" onclick="logoutUsuario()"><i class="glyphicon glyphicon-lock"></i> Logout</a></li>
@@ -236,8 +242,8 @@
 			<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal">×</button>
 				<h3>Registro de Usuario</h3>
-		</div>
-		<div class="modal-body">
+			</div>
+			<div class="modal-body">
 	            <div class="row">
 	                <div class="col-md-6 col-xs-5">
 	                    	<h4>Datos de Usuario</h4>
@@ -282,11 +288,11 @@
 	                    </p>
 	                </div>
 	            </div>
-		</div>
-		<div class="modal-footer">
-			<button class="btn" data-dismiss="modal">Cerrar</button>
-	        <button type="button" class="btn btn-primary" onclick="crearMiembro()">Confirmar</button>
-		</div>
+			</div>
+			<div class="modal-footer">
+				<button class="btn" data-dismiss="modal">Cerrar</button>
+		        <button type="button" class="btn btn-primary" onclick="crearMiembro()">Confirmar</button>
+			</div>
 		</div>
 	</div>
 </div>
@@ -314,7 +320,7 @@
 	            </div>
 			</div>
 			<div class="modal-footer">
-				<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+				<button class="btn" data-dismiss="modal">Cerrar</button>
 				<button type="button" class="btn btn-primary" onclick="IniciarSesion()">Confirmar</button>
 			</div>
 		</div>
