Arreglo de bug en pantalla de auditoria

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialAuditoria.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialAuditoria.xhtml
@@ -63,7 +63,7 @@
 		
 						<h:column>
 							<f:facet name="header">Tipo</f:facet>
-							#{o.usuario}
+							#{o.tipoUsuario}
 						</h:column>
 						
 						<h:column>
