--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialReclamos.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialReclamos.xhtml
@@ -75,7 +75,7 @@
 							</div>
 						</div>
 						<div class="modal-footer">
-							<h:commandButton class="btn" id="btnConfirmarResolucion" value="Confirmar" action="#{reclamoMB.resolverReclamo}" />
+							<h:commandButton class="btn" id="btnConfirmarResolucion" value="Resolver" action="#{reclamoMB.resolverReclamo}" />
 							<h:commandButton class="btn" value="Cancelar" action="#{reclamoMB.ocultarPanelResolver}" />
 						</div>
 					</div>
